bug fix overflow

--- a/estilo/mobile.css
+++ b/estilo/mobile.css
@@ -19,17 +19,100 @@
 
 header {
     padding: 15px;
+    margin-bottom: 60px;
 }
 
-#menu {
+header div#menu {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-ul#lista {
-    display: flex;
-    flex-flow: column nowrap;
+div#menu img {
+    width: 30%;
+    max-width: 150px;
+}
 
+nav#navegacao {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    cursor: pointer;
+}
+
+nav#navegacao > i#icone {
+    font-size: 1.3em;
+    margin-bottom: 10px;
+}
+
+ul#lista {
+    display: block;
     list-style-type: none;
+}
+
+#lista > li {
+    padding-bottom: 10px;
+}
+
+#lista > li > a {
+    font-size: 1.2em;
+    text-decoration: none;
+    color: black;
+    line-height: 1.3em;
+}
+
+#lista > li > a:hover {
+    text-decoration: underline;
+}
+
+header a#botao {
+    width: 30%;
+    max-width: 180px;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    border: 1px solid black;
+    border-radius: 30px;
+    padding: 10px;
+    transition: background-color 0.3s;
+}
+
+header a#botao:hover {
+    background-color: lightgrey;
+    text-decoration: underline;
+}
+
+main {
+    display: grid;
+    grid-template: auto auto auto / 1fr;
+    background-color: lightgrey;
+}
+
+section#principal {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    padding-top: 30px;
+}
+
+div#imagem {
+    width: 100%;
+}
+
+div#imagem > img {
+    display: block;
+    margin: auto;
+    max-width: 800px;
+    width: 100%;
+}
+
+section#secundario {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+    text-align: center;
+}
+
+
+section#terceiro {
+    grid-row: -2 / -1;
+    grid-column: 1 / 2;
 }
